@@ -1,3 +1,7 @@
+Sun Sep 21 11:02:27 2003  Owen Taylor  <otaylor@redhat.com>
+
+	* main.c: Open the toplevel node in the descendants tree.
+
 Sat Sep 20 16:43:42 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* main.c process.c tree.c: Clean up deprecated usages.
